tests/snapshots/config_fixtures__unclosed_string.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 2, column 16
  |
2 | host = "0.0.0.0
  |                ^
invalid basic string, expected `"`
